Increased label title font size depending on paper size and fixed resulting overflow onto next page.

--- a/assets/styles/label-landscape.scss
+++ b/assets/styles/label-landscape.scss
@@ -1,5 +1,5 @@
 .label__title {
-  font-size: 4rem;
+  font-size: 5.4rem;
   text-transform: uppercase;
   text-align: center;
   font-weight: bold;
