--- a/assets/styles/label.scss
+++ b/assets/styles/label.scss
@@ -107,7 +107,7 @@ th {
 }
 
 .product-name {
-  margin-bottom: 1rem;
+  margin-bottom: 0.9rem;
   text-align: center;
   font-size: 1.5rem;
   font-weight: bold;
